forgot to give credit for template

--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
 								<!-- Contact -->
 									<section class="contact">
 										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
+											<h3>This Template Came From <a href="https://html5up.net/helios">HERE</a></h3>
 										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+										<p>A (free) responsive site template by HTML5 UP. Built with HTML5/CSS3 and released under the CCA license.</p>
 										<ul class="icons">
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
